--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,21 +15,29 @@ services:
   mysql:
     image: mysql:5.7
     restart: always
-    ports:
-      - "3322:3306"
     env_file:
       - .env/development/database
     volumes:
-      - sql_db:/var/lib/mysql
+      - development_db:/var/lib/mysql
 
-  postgres:
-    image: postgres
+  mysql_test:
+    image: mysql:5.7
+    restart: always
     env_file:
-      - .env/development/database
+      - .env/test/database
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - test_db:/var/lib/mysql
+
+  mysql_prod:
+    image: mysql:5.7
+    restart: always
+    env_file:
+      - .env/production/database
+    volumes:
+      - production_db:/var/lib/mysql
 
 volumes:
-  db_data:
   gem_cache:
-  sql_db:
+  development_db:
+  production_db:
+  test_db:
